# md-ua-papers-scrapper

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
notebooks/: elsevier_loading_pipeline__elspy.ipynb  elsevier_loading_pipeline__pybliometrics.ipynb
src/: config.py  queue_service.py
src/paper_finders/: scopus_paper_searcher.py
src/webpage_pdf_finders/: fake_proxy.py  main.py  paper_retriever.py  utils.py
