[tool.poetry]
name = "master-code"
version = "0.1.0"
description = ""
authors = ["Ostap Bodnar <ostapbod674@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ua-gec = "^2.1.3"
elsapy = "^0.5.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
scidownl = "^1.0.2"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.9.5"
aiofiles = "^24.1.0"
free-proxy = "^1.1.1"
pybliometrics = "^4.1"
pika = "^1.3.2"
aio-pika = "^9.4.2"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
